--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,6 @@ skip_handlers: false
 
 vault_agent_download_url: "https://releases.hashicorp.com"
 
-vault_agent_configs: {}
 vault_agent_templates: {}
 
 vault_agent_user: "root"
@@ -12,8 +11,6 @@ vault_agent_dir: "/opt/vault-agent"
 vault_agent_dirs:
   main:
     path: "{{ vault_agent_dir }}"
-  configs:
-    path: "{{ vault_agent_dir }}/config.d"
   templates:
     path: "{{ vault_agent_dir }}/template.d"
   certs:
@@ -32,7 +29,7 @@ vault_agent_service: |
   supervisor="supervise-daemon"
   pidfile="/run/${RC_SVCNAME}.pid"
   command="/usr/bin/${RC_SVCNAME}"
-  command_args="agent -config={{ vault_agent_dir }}/vault-agent.json -config={{ vault_agent_dirs.configs.path }}"
+  command_args="agent -config={{ vault_agent_dir }}/vault-agent.json"
   command_background="true"
   extra_started_commands="reload"
 
@@ -56,13 +53,11 @@ vault_agent_unit: |
   Requires=network-online.target
   After=network-online.target
   ConditionFileNotEmpty={{ vault_agent_dir }}/vault-agent.json
-  StartLimitIntervalSec=60
-  StartLimitBurst=3
 
   [Service]
   User=root
   Group=root
-  ExecStart=/usr//bin/vault agent -config={{ vault_agent_dir }}/vault-agent.json -config={{ vault_agent_dirs.configs.path }}
+  ExecStart=/usr/bin/vault-agent agent -config={{ vault_agent_dir }}/vault-agent.json
   ExecReload=/bin/kill --signal HUP $MAINPID
   KillMode=process
   KillSignal=SIGINT
