Get archive checksum node-exporter way

--- a/tasks/00-preflight.yml
+++ b/tasks/00-preflight.yml
@@ -73,3 +73,10 @@
       - vault_agent_unit is string
       - vault_agent_unit | length
     quiet: true
+
+- name: set checksum for {{ _arch }} architecture
+  set_fact:
+    _archive_checksum: "{{ item.split(' ')[0] }}"
+  with_items: "{{ _checksums }}"
+  when:
+    - "('linux_' + _arch + '.zip') in item"
