--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
 
     needs: lint
 
+    env:
+      OBJC_DISABLE_INITIALIZE_FORK_SAFETY: yes
+
     strategy:
       matrix:
         scenario:
