--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     needs: lint
 
     env:
-      OBJC_DISABLE_INITIALIZE_FORK_SAFETY: yes
+      OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
 
     strategy:
       matrix:
